[tool.poetry]
name = "pysaltcorn"
version = "0.1.0"
description = "Python library for Saltcorn API"
authors = ["Michael Dubner <pywebmail@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
twine = "^4.0.1"
mypy = "^0.991"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
