[tool.poetry]
name = "pysaltcorn"
version = "0.1.1"
description = "Python library for Saltcorn API"
authors = ["Michael Dubner <pywebmail@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
twine = "^4.0.1"
mypy = "^0.991"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"pysaltcorn/__init__.py" = [
    '^__version__ = "{version}"$',
]
